project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.4.1\...HEAD[Unreleased]

=== Added

* Add release checklist ({pull-request-url}/16[#16])
* Implement `PartialEq` and `Eq` for `ExitCode` ({pull-request-url}/19[#19])
* Add `ExitCode` based `Result` type and unit test ({pull-request-url}/21[#21])

=== Changed

* Rename `FromErrorKindError` to `TryFromErrorKindError`
* Rename `FromExitStatusError` to `TryFromExitStatusError`

== {compare-url}/v0.4.0\...v0.4.1[0.4.1] - 2023-01-28

=== Fixed

* Fix conversion from `std::process::ExitStatus` if the process was terminated
  by a signal
* Fix conversion from `std::io::ErrorKind` to return `ExitCode::NoInput` if
  error kind is `ErrorKind::NotFound`

== {compare-url}/v0.3.4\...v0.4.0[0.4.0] - 2022-12-29

=== Added

* Add conversions to primitive integer types
* Add `no_std` support
* Add conversion from `std::io::ErrorKind`
* Add conversion from `std::process::ExitStatus`
* Add `ExitCode::exit()`

== {compare-url}/v0.3.3\...v0.3.4[0.3.4] - 2022-11-24

=== Added

* Add `dependabot.yml`

=== Fixed

* Fix CITATION.cff and bump2version Settings ({pull-request-url}/10[#10])

== {compare-url}/v0.3.2\...v0.3.3[0.3.3] - 2022-10-24

=== Added

* Add `inline` attribute to `Display` trait

== {compare-url}/v0.3.1\...v0.3.2[0.3.2] - 2022-09-18

=== Added

* Add lint attributes to examples
* Add the example that returns original exit code

== {compare-url}/v0.3.0\...v0.3.1[0.3.1] - 2022-09-06

=== Removed

* Remove `repr(u8)` from `ExitCode`

== {compare-url}/v0.2.2\...v0.3.0[0.3.0] - 2022-06-10

=== Added

* Implement `Display` trait and corresponding test ({pull-request-url}/1[#1])
* Add the example that returns `sysexits::ExitCode`

== {compare-url}/v0.2.1\...v0.2.2[0.2.2] - 2022-06-04

=== Added

* Add the `inline` attribute

== {compare-url}/v0.2.0\...v0.2.1[0.2.1] - 2022-05-31

=== Added

* Add code example to README

=== Changed

* Update documentation examples inside the crate root file
